--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Boyang Xia / Boyang Xia"
 title_separator          : "-"
 name                     : &name "Boyang XIA"
 description              : &description "ICT, CAS"
-url                      : https://LawrenceXia2008.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://lawrencexia2008.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "LawrenceXia2008/LawrenceXia2008.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
